# map-reduce

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
exe/: CMakeLists.txt  dev_demo.cpp  print_version.cpp
include/: CMakeLists.txt  version.h.in
include/sb-mapreduce/: CMakeLists.txt  common.h  emit-streams.h  map-reduce.h  map-reduce.hpp  map-reduce.tpp  master.h  worker.h
script/: container-build-project.sh  container-install-build-tools.sh  run-dev-demo.sh  run_dev_demo.sh
src/: CMakeLists.txt  common.cpp  emit-streams.cpp  map-reduce.cpp  master.cpp  worker.cpp
test/: CMakeLists.txt  all-tests-runner.cpp  test-common.cpp  test-emit-intermediate-stream.cpp  test-runner.cpp
